css/style.css
@font-face {
  font-family: 'CoreCircus';
  src: url('../font/core-circus/CoreCircus.eot'); /* IE9 Compat Modes */
  src: url('../font/core-circus/CoreCircus.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
       url('../font/core-circus/CoreCircus.woff') format('woff'), /* Pretty Modern Browsers */
       url('../font/core-circus/CoreCircus.ttf')  format('truetype'); /* Safari, Android, iOS */
}

body {
    font-family: 'Raleway', sans-serif;
    background-color: #151515;
    font-size: 16px;
}

a {
    color: #e05953;
}

.fixed {
    position: fixed;
    width: 100%;
    top: 0;
    z-index: 100;
}

#splash-affix-container {
    transform: translateZ(0);
}

#splash-affix-container.affix {
    top: calc(100px - 100vh);
    z-index: 50;
    width: 100%;
}

#splash-affix-container.affix-top {
    
}

#header {
    height: 100px;
}

#header #logo {
    top: 50%;
    transform: translate(0%, -50%);
}

#header #social {
    top: 50%;
    transform: translate(0%, -50%);
    display: inherit;
}

#header #social img {
    margin-right: 7px;
}

.static-bg {
    background-size: cover;
    background-position: center center;
    background-repeat: no-repeat;
    overflow: hidden;
    padding: 0 2% 30px 2%;
}

#splash-container {
    height: 100vh;
}

#splash-affix-container {
    height: 100vh;
}

#splash-fade-container {
    position: relative;
    top: 0;
    left: 0;
}

#splash {
    height: 100vh;
    background-image: url(../img/building.jpg);
    z-index: 10;
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
}

#splash_blur {
    height: 100vh;
    background-image: url(../img/building_blur.jpg);
    opacity: 0;
    z-index: 11;
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
}

#seal-container {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%,-50%);
    z-index: 12;
}

#hint-container {
    position: absolute;
    top: 80%;
    left: 50%;
    transform: translate(-50%,-50%);
    z-index: 12;
}

.section {
    padding: 50px 3% 50px 3%;
}

.section-text-container {
    color: white;
}

.section-main-container {
    
}

.section-heading {
    font-family: 'CoreCircus', sans-serif;
    font-weight: 300;
    font-size: 34px;
    line-height: 2;
    letter-spacing: -1px;
    color: #e05953;
    padding-top: 30px;
}

.section-text {
    font-family: 'Raleway', sans-serif;
    font-weight: 100;
}

.decorative-divider {
    margin: 30px 0 30px 0;
}

#story {
    background-image: url(../img/bg_black_texture.jpg);
}

#story .section-text-container {
    padding-left: 20px;
}

#bios {
    background-image: url(../img/bg_wood_panels.jpg);
    background-size: auto;
    background-position: top;
    background-repeat: repeat-y;
}

#bios .section-text-container {
    max-width: 302px;
}

#bio-list {
    background-image: url(../img/bg_team_list.png);
    background-size: cover;
    margin-top: 20px;
    padding-top: 40px;
    height: 369px;
    min-width: 300px;
    display: inherit;
}

a.list-group-item {
    background-color: transparent;
    border: 0; /* Global overwrite! */
}

a.list-group-item:first-child {
    border-top-left-radius: 0; /* Global overwrite! */
    border-top-right-radius: 0; /* Global overwrite! */
}

a.list-group-item:last-child {
    border-bottom-left-radius: 0; /* Global overwrite! */
    border-bottom-right-radius: 0; /* Global overwrite! */
}

a.list-group-item.active, a.list-group-item.active:hover, a.list-group-item.active:focus, a.list-group-item:focus {
    background-color: transparent;
}

a.list-group-item .bio-name, a.list-group-item .bio-position {
    padding-left: 10px;
}

a.list-group-item.active .bio-name, a.list-group-item.active .bio-position {
    color: #e05953;
}

a.list-group-item .bio-position {
    margin-top: -12px;
}

.bio-container {
    max-width: 960px;
    margin-left: auto;
    margin-right: auto;
}

.bio-container-dynamic {
    display: inherit;
    padding-left: 30px;
    padding-right: 30px;
}

.bio-container-static {
    display: none;
    margin-bottom: 30px;
}

.bio-portrait-container {
    padding: 0px;
}
    
.bio-portrait img {
    
}

.bio-name {
    font-weight: 600;
}

.bio-position {
    font-weight: 500;
    color: #9d9d9d;
    text-transform: uppercase;
}

.bio-text {
    background-image: url(../img/bg_team_bio_text.jpg);
    background-size: cover;
    padding: 2% 20px 0px 20px;
    color: white;
    font-size: 15px;
}

.bio-bio {
    margin-top: 15px;
}

.bio-bio + [data-readmore-toggle] {
    color: #d5d5d5;
}

#contact {
    background-image: url(../img/bg_black_texture.jpg);
    min-height: 600px;
}

#contact #banner {
    padding-top: 3em;
    padding-bottom: 3em;
}

#contact .contact-banner {
    font-family: 'CoreCircus', sans-serif;
    font-size: 2.7em;
    line-height: 1.5;
    letter-spacing: -1px;
    color: #d5d5d5;
}

#contact .contact-heading {
    font-family: 'CoreCircus', sans-serif;
    font-weight: 300;
    font-size: 24px;
    line-height: 2;
    letter-spacing: -1px;
    color: #e05953;
}

#contact #instafeed {
    max-height: 350px;
    overflow: auto;
    margin-left: 0; /* Global overwrite! */
    margin-right: 0; /* Global overwrite! */
}

#contact .insta-img {
    padding: 3px;
}

#contact #form-container .form-control {
    margin-bottom: 10px;
}

#contact #form-messages {
    padding-top: 10px;
    color: #d5d5d5;
}

#contact #form-messages.success {
    color: darkgreen;
}

#contact #form-messages.error {
    color: darkred;
}

#contact #contact-map-container {
    padding-left: 0;
    padding-right: 0;
}

#contact #contact-map {
    height: 350px;
}

#footer {
    background-color: #484848;
    color: white;
    min-height: 80px;
    padding: 25px;
}

#footer-address {
    margin-top: 15px;
    font-size: 12px;
}

#footer-social img {
    margin-right: 7px;
}

.footer-text {
    margin: 0 15px 0 15px;
}

/* RESPONSIVE CSS--------------------------------------------------------------- */

@media (max-width: 525px) {
    .section-text-container {
        min-width: 0;
    }
}

/* Below small devices */
@media (max-width: 767px) {
    #header {
        height: 80px;
    }
    
    #splash-affix-container.affix {
        top: calc(80px - 100vh);
    }
    
    .bio-text {
        padding-top: 10px;
        padding-bottom: 10px;
    }
}

/* Below medium devices */
@media (max-width: 991px) {
    #header #social {
        display: none;
    }
}

/* Below large devices */
@media (max-width: 1199px) {
    .section {
        
    }
    
    .section-heading {
        padding-top: 0px;
    }

    #story {
        min-height: 600px;
    }

    #story .section-text-container {
        padding-left: 0px;
    }
    
    #bios {
        min-height: 600px;
    }
    
    #bios .section-text-container {
        margin-left: 0px;
        margin-right: 0px;
    }
    
    #bio-list {
        display: none;
    }
    
    .bio-container-dynamic {
        display: none;
    }

    .bio-container-static {
        display: inherit;
    }
    
    #bios .decorative-divider {
        display: none;
    }
    
    .bio-container {
        background-position: center bottom;
        margin-left: auto;
        margin-right: auto;
    }
    
    #contact .contact-banner {
        font-size: 2.3em;
    }
}

@media (min-width: 1400px) {
    .container {
        width: 1400px;
    }
}

